# MarimbaBot

./: .gitignore  .gitmodules  HOWTO.md  README.md  activate_cuda.sh  load_vcs_workspace.sh  requirements.txt  workspace.repos
marimbabot_audio/: CMakeLists.txt  README.md  onset_detection.py  package.xml
marimbabot_audio/config/: config.rviz
marimbabot_audio/examples/: send_hit_sequence.py
marimbabot_audio/launch/: audio_feedback.launch  audio_to_spectrogram.old.launch  detect_onset.launch  marimbabot.launch  marimbabot_rviz.launch  microphone.launch  midi.launch  music_note_visualization.launch  onset_detection.launch  open_rviz.launch  play_audio_topic.launch  play_recording.launch  real_time_visualization.launch  run.launch  run_all.launch  sequence_evaluation.launch
marimbabot_audio/ly/: all_my_ducklings.ly
marimbabot_audio/msg/: NoteOnset.msg
marimbabot_audio/playground/: monophonic.py  out.mid  pretty_midi_example.py  visualization.py
marimbabot_audio/script/: MIR_eval.ipynb  peak_loudness.py
marimbabot_audio/scripts/: detect_onset.py  dummy_client_audio_from_lilypond.py  dump_audio.py  midi_visualization.ipynb  midi_visualization.py  note2midi.py  onset_detection.py  onsets_visualization.py  score.py  sequence_evaluation.py  visualization.py
marimbabot_audio/src/: 3.ly  3.midi  audio_from_lilypond copy.py  audio_from_lilypond.py  bar.ly  bar.midi  eval_visualization.py  onset_detection.py  onsets_visualization.py  sequence_evaluation.py  testing.py  yee.midi
marimbabot_audio/test/: music.bag  onset_detection.ipynb
marimbabot_behavior/: CMakeLists.txt  README.md  package.xml  setup.py
marimbabot_behavior/launch/: dummy_marimbabot_behavior.launch  marimbabot.launch  test_behavior.launch
marimbabot_behavior/scripts/: behavior_node_dummy.py  commandGUI.py
marimbabot_behavior/src/: behavior_node.py  interpreter.py  interpreter_node.py
marimbabot_bringup/: CMakeLists.txt  README  README.md  package.xml
marimbabot_bringup/launch/: marimbabot.launch  marimbabot_ur5_bringup.launch  marimbabot_ur5_bringup_with_servo.launch  marimbabot_ur5_bringup_with_servo_wifi.launch
marimbabot_command_recognition/: CMakeLists.txt  README.md  package.xml
marimbabot_command_recognition/examples/: text2speech_client.py
marimbabot_command_recognition/launch/: marimbabot.launch  test4text2command.launch  text2speech.launch
marimbabot_command_recognition/msg/: Speaking.msg  SpeakingEnd.msg  Speech.msg  TmpFile.msg
marimbabot_command_recognition/src/: audio2tmp.py  command_extract.py  file_control.py  speech2text.py  speech_recognition.py  text2command.py  text2speech.py  text2speech_client.py  text2speech_w_tmpfile.py  text2speech_wo_tmpfile.py
marimbabot_command_recognition/srv/: Speak.srv
marimbabot_description/: CMakeLists.txt  README.md  package.xml
marimbabot_description/config/: elbow.yaml  elbow_up.yaml  marimba_ur5.rviz  ur5_controllers.yaml
marimbabot_description/launch/: double_flex_mallet.launch  double_flex_mallet_gazebo.launch  flex_mallet_holder.launch  gazebo.launch  load_robot_description.launch  marimba_rviz.launch  marimba_ur5_upload.launch  marimbabot_display.launch  marimbabot_ur5_display.launch  marimbabot_ur5_upload.launch  two_mallet_display.launch
marimbabot_description/mesh/: static_mallet_holder.stl  two_mallet_base_element.stl  two_mallet_servo_element.stl
marimbabot_description/rviz/: urdf_inspection.rviz
marimbabot_description/urdf/: double_flex_mallet.urdf  flex_mallet_holder.urdf  gazebo_gripper_transmissions.xacro  marimba.urdf.xacro  marimba_standalone.urdf.xacro  marimbabot_ur5.urdf.xacro  materials.xacro  static_mallet_holder.urdf  tams_ur5_setup.urdf.xacro  two_mallet_compliance_holder.urdf.xacro  ur5_marimba.urdf.xacro  utilities.xacro
marimbabot_hardware/: CMakeLists.txt  README.md  package.xml
marimbabot_hardware/config/: controllers.yaml  joint_limits.yaml
marimbabot_hardware/launch/: mallet_servo_control.launch  mallet_servo_control_debug.launch  mallet_servo_control_debug_dummy.launch  mallet_servo_control_debug_serial.launch  mallet_servo_control_debug_wifi.launch
marimbabot_hardware/scripts/: joint_state.py  wifi_client_sim.py
marimbabot_hardware/src/: hardware_control_node.cpp  joint_state.py  mallet_hardware_control_node.cpp  mallet_hardware_control_node_dummy.cpp  mallet_hardware_control_node_serial.cpp  mallet_hardware_control_node_wifi.cpp  servo_interface.cpp  servo_interface_delete.cpp  servo_interface_dummy.cpp  servo_interface_serial.cpp  servo_interface_wifi.cpp
marimbabot_hardware/urdf/: two_mallet_holder.urdf
marimbabot_msgs/: CMakeLists.txt  README.md  package.xml
marimbabot_msgs/action/: HitSequence.action  LilypondAudio.action
marimbabot_msgs/actions/: HitSequence.action
marimbabot_msgs/msg/: CQTStamped.msg  Command.msg  HitSequence.msg  HitSequenceElement.msg  HitSequenceElementList.msg  HitSequenceGoal.msg  NoteOnset.msg  SequenceMatchResult.msg  SequenceScore.msg  Speech.msg  TmpFile.msg
marimbabot_msgs/srv/: SpeechRecognition.srv
marimbabot_planning/: CMakeLists.txt  README.md  package.xml
marimbabot_planning/cfg/: planning.cfg
marimbabot_planning/config/: planning.yaml
marimbabot_planning/launch/: marimbabot.launch
marimbabot_planning/scripts/: dummy_client.py  keyboard_player.py  self_calibration_optimization_example.ipynb  sound_pad.py  spline_generator.py  timing.py  trajectory_generator.py
marimbabot_planning/src/: double_mallet.cpp  hitsequence_server.py  lilypond_to_hitpoint.cpp  move_to_pose.cpp  node.cpp  planning.cpp  trajectory_generation.cpp  utils.cpp
marimbabot_sim/: CMakeLists.txt  README.md  package.xml
marimbabot_sim/launch/: gazebo.launch  marimba_display.launch
marimbabot_sim/rviz/: urdf.rviz
marimbabot_sim/urdf/: marimba.urdf.xacro  materials.xacro
marimbabot_simulation/: CMakeLists.txt  README.md  package.xml  setup.py
marimbabot_simulation/config/: pj_layout.xml
marimbabot_speech/: CMakeLists.txt  LICENSE.md  README.md  package.xml  setup.py
marimbabot_vision/: CMakeLists.txt  README.md  package.xml
(+242 files in other folders)
