<?xml version="1.0"?>
<package format="2">
  <name>marimbabot_audio</name>
  <version>0.0.0</version>
  <description>
  The marimbabot_audio package is designed to recognize and verify music notes with high accuracy.
  It uses a variety of algorithms to detect and analyze musical notes, and provides feedback
  on the accuracy of the notes that have been identified.
  </description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>Apache License Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
