<?xml version="1.0"?>
<package format="2">
  <name>marimbabot_audio</name>
  <version>0.0.0</version>
  <description>Detect and visualize notes in audio signals. Also convert music note to midi file.</description>

  <maintainer email="yunlong.wang@studium.uni-hamburg.de">1wang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>audio_common_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rospy</depend>  

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
