<?xml version="1.0"?>
<package format="2">
  <name>marimbabot_audio</name>
  <version>0.0.0</version>
  <description>Detect and visualize notes in audio signals. Also convert music note to midi file and produces audio from lilypond.</description>

  <maintainer email="yunlong.wang@studium.uni-hamburg.de">1wang</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>audio_common_msgs</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rospy</depend>

  <build_export_depend>fluidsynth</build_export_depend>
  <build_export_depend>sound_play</build_export_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sound_play</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>audio_common</exec_depend>
  <exec_depend>fluidsynth</exec_depend>
  <exec_depend>sound_play</exec_depend>
  <exec_depend>audio_capture</exec_depend>
</package>
