<?xml version="1.0"?>
<package format="2">
  <name>marimbabot_behavior</name>
  <version>0.0.0</version>
  <description>
  The marimbabot_behavior package is used for estimating the desired behavior of MarimbaBot according to a detected command text sequence.
  The package is a necessary part of the robot and is required to ensure the robot is able to decide on appropriate actions.
  </description>

  <maintainer email="juli@todo.todo">juli</maintainer>

  <license>Apache License Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
