<?xml version="1.0"?>
<package format="2">
  <name>marimbabot_hardware</name>
  <version>0.0.0</version>
  <description>
  A small adapter package for controlling the mallet holders servo using ros_control
  </description>

  <maintainer email="tom@todo.todo">root</maintainer>

  <license>Apache License Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>ros_control</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>ros_control</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
