<?xml version="1.0"?>
<package format="2">
  <name>marimbabot_msgs</name>
  <version>0.0.0</version>
  <description>
    Package containing all the custom messages used by the MarimbaBot.
  </description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>Apache License Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
</package>
