<?xml version="1.0"?>
<package format="2">
  <name>marimbabot_msgs</name>
  <version>0.0.0</version>
  <description>
    Package containing all the custom messages used by the MarimbaBot.
  </description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>Apache License Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
    <message_generation/>
  </export>

</package>
