<?xml version="1.0"?>
<package format="2">
  <name>marimbabot_planning</name>
  <version>0.0.0</version>
  <description>
  The marimbabot_planning package is used planning part of the MarimbaBot.
  It provides a comprehensive set of tools to create, analyze and simulate motion plans for the robot.
  The package is a necessary part of the robot and is required to ensure the robot is able to move accurately and safely.
  </description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>Apache License Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
