<?xml version="1.0"?>
<package format="2">
  <name>marimbabot_planning</name>
  <version>0.0.0</version>
  <description>
  The marimbabot_planning package is used planning part of the MarimbaBot.
  It provides a comprehensive set of tools to create, analyze and simulate motion plans for the robot.
  The package is a necessary part of the robot and is required to ensure the robot is able to move accurately and safely.
  </description>

  <maintainer email="1guengoe@todo.todo">1guengoe</maintainer>

  <license>Apache License Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>bio_ik</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>marimbabot_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>bio_ik</exec_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>marimbabot_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>pilz_industrial_motion</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  
  <export>

  </export>
</package>
