<?xml version="1.0"?>
<package format="2">
  <name>marimbabot_vision</name>
  <version>0.0.0</version>
  <description>
  The marimbabot_vision package is designed to help MarimbaBot recognize notes and to understand how to behave in its environment.
  This package is designed to be an invaluable part of the robot's operation, allowing it to accurately and efficiently respond to its environment.
  </description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
