<?xml version="1.0"?>
<package format="2">
  <name>marimbabot_vision</name>
  <version>0.0.0</version>
  <description>
  The marimbabot_vision package is designed to help MarimbaBot recognize notes and to understand how to behave in its environment.
  The vision is based on a transformer neural network found here: https://huggingface.co/Flova/omr_transformer
  </description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>Apache License Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_camera</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_camera</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
